<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Sina Weibo -->
    <string name="app_sina_consumer_key">156524751</string>
    <string name="app_sina_consumer_secret">b09a216632a74487884de5d16de8fb11</string>
    
    <string name="loading">正在加载，请稍候...</string>
    <string name="main_spinner_category">文章分类</string> 
    <string name="main_menu_refresh">刷新列表</string>      
    <string name="main_menu_bloglist">文章列表</string>
    <string name="main_menu_reviewlist">评论列表</string>
    <string name="main_menu_publish">发表文章</string>
    <string name="main_menu_login">登录</string>
    <string name="main_menu_logout">登出</string>
    <string name="main_menu_about">关于</string>
    <string name="main_menu_exit">退出</string>   
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
        
    <string name="main_listview_foot_more">更多</string>
    <string name="main_listview_foot_end">已到底</string>
    <string name="main_textview_category">所有分类</string>
    <string name="head_blog_detail_title">文章正文</string>
    <string name="head_blog_detail_review_button">评论</string>
    <string name="head_blog_publish_title">发表文章</string>
    <string name="head_blog_publish_button">发表</string>
    <string name="head_review_publish_title">发表评论</string>
    <string name="head_review_publish_button">发表</string>
    <string name="head_reviewlist_title">最新评论</string>
    <string name="no_blog">无文章</string>
    <string name="no_review">无评论</string>
    <string name="newest_update">最近更新：</string>
    
    <!-- BlogPublish -->
    <string name="blog_publish_success">文章发布成功</string>
    <string name="blog_publish_fail">文章发布失败：</string>
    <string name="blog_publish_waiting">请等待...</string>
    <string name="blog_publish_publishing">正在发表文章...</string>
    <string name="blog_publish_choose_image">请选择图片文件！</string>
    <string name="blog_publish_delete_image">确认删除吗？</string>
    <string name="blog_publish_hint_title">请输入文章标题</string>
    <string name="blog_publish_hint_content">请输入文章内容</string>
    <string name="blog_publish_hint_tag">请输入博文标签</string>
    <string name="blog_publish_label_title">标题</string>
    <string name="blog_publish_label_content">内容</string>
    <string name="blog_publish_label_tag">标签</string>
    <string name="blog_publish_label_tag_ps">多标签用英文逗号`,`分隔</string>
    <string name="blog_publish_label_catalog">博客分类</string>
    
    <!-- ReviewPublish -->
    <string name="review_publish_success">评论成功</string>
    <string name="review_publish_successInfo">评论成功，</string>
    <string name="review_publish_failInfo">评论失败：</string>
    <string name="review_publish_label_username">姓名</string>
    <string name="review_publish_label_email">电子邮件</string>
    <string name="review_publish_label_website">网站</string>
    <string name="review_publish_label_review">评论</string>
    <string name="review_publish_hint_username">名称（必须输入）</string>
    <string name="review_publish_hint_comment">请输入评论内容</string>
    
    <!-- BlogReview ReviewList -->
    <string name="blog_review_operate">操作</string>
    <string name="blog_review_del_success">删除成功</string>
    <string name="blog_review_del_fail">删除失败：</string>
    <string name="blog_review_floor">楼：</string>
    <string-array name="blog_review_optItems">
    	<item>删除</item>
    </string-array>
    
    <!-- blog_detail.xml -->
    <string name="blog_detail_label_author">作者：</string>
    <string name="blog_detail_label_related_posts">相关文章列表：</string>
    
    <!-- Login -->
    <string name="login">登录</string>
    <string name="logining">正在为你登录...</string>
    <string name="waiting">请等待...</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    
    <!-- login_dialog.xml -->
    <string name="login_label_account">账号</string>
    <string name="login_label_password">密码</string>
    
    <!-- login_sina_weibo.xml -->
    <string name="login_weibo_label_account">账号</string>
    <string name="login_weibo_label_password">密码</string>
    <string name="login_weibo_label_remember">记住密码</string>
    <string name="login_weibo_label_share">分享到微博</string>
    
    <!-- login_tencent_weibo.xml -->
    <string name="login_qq_label_account">账号</string>
    <string name="login_qq_label_password">密码</string>
    <string name="login_qq_label_remember">记住密码</string>
    <string name="login_qq_label_share">登录</string>
    <string name="login_qq_label_title">腾讯微博</string>
    
    <!-- LoginSina -->
    <string name="sinalogin_check_account">账号不能为空</string>
    <string name="sinalogin_check_pass">密码不能为空</string>
    <string name="sinalogin_check_server">服务器验证中...</string>
    
    <!-- UIHelper -->
    <string name="share">分享</string>
    <string name="sharing">分享中...</string>
    <string name="surelogout">确认退出吗？</string>
    <string name="sure">确认</string>
    <string name="cancle">取消</string>
    <string name="logout_success">登出成功</string>
    
    
    <!-- pull_to_refresh -->
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    
    <!-- info message -->    
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">XML接口数据解析失败</string>
    <string name="http_status_code_error">数据请求失败，错误码：{0}</string>
    <string name="msg_email_illegal">无效的电子邮件地址</string>
    <string name="msg_name_empty">姓名必须输入:)</string>
    <string name="msg_review_empty">请输入评论内容</string>
    <string name="msg_blog_title_empty">标题必须输入:)</string>
    <string name="msg_blog_content_empty">请输入文章内容</string>
    <string name="msg_blog_is_null">文章读取失败，可能已被删除</string>
    
    <!-- share items -->
    <string-array name="app_share_items">
	    <item>新浪微博</item>
	    <item>腾讯微博</item>
    </string-array>
    
    <!-- sina share message -->
    <string name="OAUTH_ERROR">服务器验证失败</string>
	<string name="OAUTH_RequestToken_ACCESS">第三方应用验证成功</string>
	<string name="OAUTH_RequestToken_ERROR">第三方应用验证失败</string>
	<string name="OAUTH_AccessToken_ACCESS">用户登录成功</string>
	<string name="OAUTH_AccessToken_ERROR">用户登录失败</string>
	<string name="Weibo_Message_NULL">分享数据不能为空</string>
	<string name="Weibo_Message_LONG">已超出140个字</string>
	<string name="Weibo_Share_Success">微博分享成功</string>
	<string name="Weibo_Share_Error">微博分享失败</string>
	<string name="Weibo_Share_Repeat">已经分享过了</string>
    
	<string name="bold">加粗</string>
	<string name="italic">斜体</string>
	<string name="underline">下划线</string>
	<string name="format">FORMAT</string>
	<string name="strikethrough">STRIKETHROUGH</string>
	<string name="superscript">SUPERSCRIPT</string>
	<string name="subscript">SUBSCRIPT</string>
        
</resources>
