<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">

	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/login_qq_label_title"/>
    
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal">
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textColor="@color/black"
	        android:text="@string/login_qq_label_account"/>            
	    <EditText
	        android:id="@+id/login_tencent_edittext_username"
	        android:layout_height="wrap_content"
	        android:layout_width="180dp"
	        android:layout_marginLeft="10dip"
	        android:singleLine="true"/>
	</LinearLayout>
	
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal">
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textColor="@color/black"
	        android:text="@string/login_qq_label_password"/>            
	    <EditText
	        android:id="@+id/login_tencent_edittext_password"
	        android:layout_height="wrap_content"
	        android:layout_width="180dp"
	        android:layout_marginLeft="10dip"
	        android:singleLine="true"
	        android:password="true"/> 
    </LinearLayout>
    
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal">
    	<Button
    		android:id="@+id/login_tencent_button_login"
    		android:layout_width="80dp"
    		android:layout_height="wrap_content"
    		android:text="@string/login_qq_label_share"/>
    	<CheckBox
    		android:id="@+id/login_tencent_checkbox_savepwd"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_vertical"
    		android:layout_marginLeft="40dp"/>
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@color/black"
	        android:text="@string/login_qq_label_remember"/>             
    </LinearLayout>
</LinearLayout>
