<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
	<include layout="@layout/head_review_publish" />
	
	<ScrollView	
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="10"
	    android:scrollbars="vertical"
	    android:fadingEdge="none">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_height="wrap_content"
		        android:layout_width="wrap_content">
			    <TextView 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginTop="6dp"
			        android:layout_marginLeft="2dp"
			        android:text="@string/review_publish_label_username"
			        android:textSize="15sp"
			        android:textColor="@color/black"/>
			    <TextView 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_gravity="center"
			        android:text="*"
			        android:layout_marginLeft="3dp"
			        android:layout_marginTop="6dp"
			        android:textSize="15sp"
			        android:textColor="@color/red"/> 
			</LinearLayout>
		    <EditText
		        android:id="@+id/post_review_user"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:singleLine="true"
		        android:hint="@string/review_publish_hint_username"
		        android:inputType="textPersonName">
			    <requestFocus/>
			</EditText>    
			<LinearLayout
				android:orientation="horizontal"
				android:layout_height="wrap_content"
		        android:layout_width="wrap_content">
			    <TextView 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginTop="6dp"
			        android:layout_marginLeft="2dp"
			        android:text="@string/review_publish_label_email"
			        android:textSize="15sp"
			        android:textColor="@color/black"/>
			    <TextView 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_gravity="center"
			        android:text="*"
			        android:layout_marginLeft="3dp"
			        android:layout_marginTop="6dp"
			        android:textSize="15sp"
			        android:textColor="@color/red"/> 
			</LinearLayout>
		    <EditText
		        android:id="@+id/post_review_email"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:singleLine="true"
		        android:hint="guest@example.com"
		        android:inputType="textEmailAddress"
		        />
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="6dp"
		        android:layout_marginLeft="2dp"
		        android:text="@string/review_publish_label_website"
		        android:textSize="15sp"
		        android:textColor="@color/black"/>
		    <EditText
		        android:id="@+id/post_review_url"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:singleLine="true"
		        android:hint="http://"
		        android:inputType="textUri"/>
		
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="6dp"
		        android:layout_marginLeft="2dp"
		        android:text="@string/review_publish_label_review"
		        android:textSize="15sp"
		        android:textColor="@color/black"/>
		    <EditText
		        android:id="@+id/post_review_comment"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="top"
		        android:hint="@string/review_publish_hint_comment"
		        android:lines="5"
		        android:maxLines="15" />
		        
		</LinearLayout>
	</ScrollView>
</LinearLayout>